--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     if (response.isAdmin) {
                         window.location.href = "pagina_admin.html";
                     } else {
-                        window.location.href = "pagina_usuario.html";
+                        window.location.href = "pagina_usuario.html"; //Ainda a ser feita!
                     }
                 } else {
                     document.getElementById("error").innerText = "Acesso negado. Verifique seu ID do RFID.";
